--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@
   background: linear-gradient(135deg, #2193b0, #6dd5ed);
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
 } */
+
+#search:active + #table {
+  display: none;
+}
