--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
 } */
 
-#search:active + #table {
-  display: none;
-}
+/* * {
+  background-color: #eafaff;
+} */
